--- a/Tyuiu.GrebenschikovAA.Sprint5.Task7.V27.Test/Tyuiu.GrebenschikovAA.Sprint5.Task7.V27.Test.csproj
+++ b/Tyuiu.GrebenschikovAA.Sprint5.Task7.V27.Test/Tyuiu.GrebenschikovAA.Sprint5.Task7.V27.Test.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.GrebenschikovAA.Sprint5.Task7.V27.Lib\Tyuiu.GrebenschikovAA.Sprint5.Task7.V27.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
