--- a/Tyuiu.GrebenschikovAA.Sprint5.Task7.V27/Tyuiu.GrebenschikovAA.Sprint5.Task7.V27.csproj
+++ b/Tyuiu.GrebenschikovAA.Sprint5.Task7.V27/Tyuiu.GrebenschikovAA.Sprint5.Task7.V27.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.GrebenschikovAA.Sprint5.Task7.V27.Lib\Tyuiu.GrebenschikovAA.Sprint5.Task7.V27.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
