--- a/Tyuiu.GrebenschikovAA.Sprint5.Task2.V14/Tyuiu.GrebenschikovAA.Sprint5.Task2.V14.csproj
+++ b/Tyuiu.GrebenschikovAA.Sprint5.Task2.V14/Tyuiu.GrebenschikovAA.Sprint5.Task2.V14.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.GrebenschikovAA.Sprint5.Task2.V14.Lib\Tyuiu.GrebenschikovAA.Sprint5.Task2.V14.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
