--- a/Tyuiu.GrebenschikovAA.Sprint5.Task0.V19/Tyuiu.GrebenschikovAA.Sprint5.Task0.V19.csproj
+++ b/Tyuiu.GrebenschikovAA.Sprint5.Task0.V19/Tyuiu.GrebenschikovAA.Sprint5.Task0.V19.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.GrebenschikovAA.Sprint5.Task0.V19.Lib\Tyuiu.GrebenschikovAA.Sprint5.Task0.V19.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
