--- a/Tyuiu.GrebenschikovAA.Sprint5.Task1.V5.Test/Tyuiu.GrebenschikovAA.Sprint5.Task1.V5.Test.csproj
+++ b/Tyuiu.GrebenschikovAA.Sprint5.Task1.V5.Test/Tyuiu.GrebenschikovAA.Sprint5.Task1.V5.Test.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.GrebenschikovAA.Sprint5.Task1.V5.Lib\Tyuiu.GrebenschikovAA.Sprint5.Task1.V5.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
