--- a/Tyuiu.GrebenschikovAA.Sprint5.Task3.V20/Tyuiu.GrebenschikovAA.Sprint5.Task3.V20.csproj
+++ b/Tyuiu.GrebenschikovAA.Sprint5.Task3.V20/Tyuiu.GrebenschikovAA.Sprint5.Task3.V20.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.GrebenschikovAA.Sprint5.Task3.V20.Lib\Tyuiu.GrebenschikovAA.Sprint5.Task3.V20.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
